13 Jan 2012: Wouter
	- Use Processes.dll code (can be freely used, source provided) for
	  kill process in windows NSIS installer.  Compiled to 6kb (not 50kb).
	  Processes.dll was made by Andrei Ciubotaru.
	- Attempt to add DHCPv6 support for windows.

10 Jan 2012: Wouter
	- truncate pidfile portable to windows.

6 Jan 2012: Wouter
	- truncate pidfile (just like NSD fix, in case directory not owned).

19 Dec 2011: Wouter
	- wait some more during reinstall on windows, to help race condition.
	- release 0.9
	- trunk if 1.0 under development.

16 Dec 2011: Wouter
	- attempt to fix endless loop on windows (reported by Alan Clegg).
	- windows installer waits for services to come to a full stop.

15 Dec 2011: Wouter
	- detailprints in windows installer and uninstaller.
	- stoppanels waits for the connection of the panel to close, this
	  may remove re-install race conditions.

14 Dec 2011: Wouter
	- Set hook throttleinterval to 1 second, this reduces the osx wakeup
	  and bootup wrong probes because the hook was throttled for 10 seconds.

13 Dec 2011: Wouter
	- release 0.8.
	- trunk is 0.9 under development.

12 Dec 2011: Wouter
	- Fix apple brick by installer, because of tarfile inclusion of
	  extended attributes that overwrote system dir extended attributes.

5 Dec 2011: Wouter
	- sigHUP reloads config and reopens logfile for log rotation support.
	- acxnlnetlabs updated to version 17.
	- fix fedora16 windows crosscompile.
	- fix double definition of malloc.

2 Dec 2011: Wouter
	- configure generated with autoconf 2.6.8.

30 Nov 2011: Wouter
	- Fix where race condition could cause blacklist of open resolver.
	- Fix to flush_infra and flush_requestlist when we use open resolver,
	  the proxy that causes this to be used as fallback has polluted those
	  entries (possibly).

29 Nov 2011: Wouter
	- Fix bug where no IPv6 causes wrong test results, notably SSL, due
	  to the error report code.

13 Nov 2011: Wouter
	- control unsafe shows the dialog popup again.
