@@ -3,6 +3,9 @@
 	  kill process in windows NSIS installer.  Compiled to 6kb (not 50kb).
 	  Processes.dll was made by Andrei Ciubotaru.
 	- Attempt to add DHCPv6 support for windows.
+	- If hotspot-signon, set override servers right away on a network
+	  change, so the user does not have to wait for 10 seconds after a
+	  change of the wifi.
 
 10 Jan 2012: Wouter
 	- truncate pidfile portable to windows.
